@@ -1,0 +1,3 @@
+(augment-load-path "muse/lisp" "muse-mode")
+(load-library "muse-autoloads")
+(require 'muse-html)
